funcionalidad de archivos

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
             <groupId>org.fxmisc.richtext</groupId>
             <artifactId>richtextfx</artifactId>
             <version>0.10.4</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <build>
