--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>com.uaa.idejavafx.App</mainClass>
+                    <archive>
+                      <manifest>
+                        <addClasspath>true</addClasspath>
+                        <mainClass>com.uaa.idejavafx.Main</mainClass>
+                      </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
