--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <version>0.10.4</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.reactfx/reactfx -->
+        <dependency>
+            <groupId>org.reactfx</groupId>
+            <artifactId>reactfx</artifactId>
+            <version>2.0-M5</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
