read line by line

--- a/resources/.conf
+++ b/resources/.conf
@@ -1,1 +1,2 @@
 compiler=C:\Users\beris\OneDrive\Documentos\NetBeansProjects\ide\compiler
+compiler=C:\Users\beris\OneDrive\Documentos\NetBeansProjects\ide\compiler
